syntax = "proto3";

package io.harness.perpetualtask.polling;

option java_multiple_files = true;

message PollingTaskParams {
  string account_id = 1;
  string polling_doc_id = 2;
  oneof task_params {
    bytes manifest_collection_params = 3;
  }
}
